fix: double scroll bar in plugin page

--- a/web/src/global.less
+++ b/web/src/global.less
@@ -83,3 +83,8 @@ ol {
 .ant-select-disabled.ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
   background-color: #fff !important;
 }
+
+.ant-layout.ant-layout-has-sider > .ant-layout,
+.ant-layout.ant-layout-has-sider > .ant-layout-content {
+  overflow-x: unset;
+}
